# atmoseer-app-backend

./: .env.example  .gitmodules  Pipfile  README.md  alembic.ini  docker-compose.yml  dockerfile  postgre-example.py  pyproject.toml
app/: __init__.py  app.py  config.py  main.py
app/api/: router.py
app/api/routes/: dogs.py  forecast.py
app/exceptions/: Exceptions.py  __init__.py
app/helpers/: PathHelper.py
app/services/: DogsService.py  ForecastService.py  __init__.py
app/services/interfaces/: AtmoseerService.py  Service.py
atmoseer_app_backend/: __init__.py  app.py  config.py  main.py
atmoseer_app_backend/api/: router.py
atmoseer_app_backend/api/routes/: dogs.py  forecast.py  heros.py  weather.py
atmoseer_app_backend/helpers/: AsyncExecutor.py  GeoStationReader.py  GeoStations.py  GreatCircleDistance.py  Logger.py  PathHelper.py  WeatherStations.csv  WorkdirManager.py  stations.csv
atmoseer_app_backend/helpers/models/: Station.py
atmoseer_app_backend/migrations/alembic/: env.py
atmoseer_app_backend/migrations/alembic/versions/: 76213b2e56df_create_hero_table.py  de9b18091887_create_account_table.py
atmoseer_app_backend/models/: Hero.py
atmoseer_app_backend/repositories/: HeroRepository.py  SomeRepository.py  __init__.py
atmoseer_app_backend/repositories/database/: __init__.py  database.py
atmoseer_app_backend/repositories/interfaces/: Repository.py  __init__.py
atmoseer_app_backend/services/: ForecastService.py  HeroService.py  SomeService.py  __init__.py
atmoseer_app_backend/services/exceptions/: BaseHTTPException.py  __init__.py  exceptions.py
atmoseer_app_backend/services/interfaces/: AtmoseerService.py  Service.py  __init__.py
atmoseer_app_backend/services/weather/: Weather.py  _ClimaTempo.py  _OpenMeteo.py  _OpenWeatherMap.py  _WeatherAPI.py
atmoseer_app_backend/services/weather/interfaces/: WeatherService.py  __init__.py
(+2 files in other folders)
